Working App First Version

--- a/index.html
+++ b/index.html
@@ -28,11 +28,17 @@
 
                     <input class="form-control form-control-lg" type="text" placeholder="" id="cityinput">
 
+                    <div id="searchedcities">
+
+                    </div>
+
                 </div>
 
                 <div class="col-3" id="searchbuttoncol">
 
                         <button type="button" class="btn btn-primary" id="searchbutton">Search</button>
+
+                        <button type="button" class="btn btn-primary" id="clearbutton">Clear</button>
 
                 </div>
             
